--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -249,7 +249,10 @@
            </rect>
           </property>
           <property name="text">
-           <string>▶▶</string>
+           <string>1x</string>
+          </property>
+          <property name="autoDefault">
+           <bool>true</bool>
           </property>
          </widget>
         </widget>
