--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -507,7 +507,7 @@
       <item>
        <widget class="QTabWidget" name="Tabs">
         <property name="currentIndex">
-         <number>0</number>
+         <number>1</number>
         </property>
         <widget class="QWidget" name="Tab_1CANFrames">
          <attribute name="title">
@@ -833,8 +833,8 @@
          <widget class="QWidget" name="gridLayoutWidget">
           <property name="geometry">
            <rect>
-            <x>9</x>
-            <y>129</y>
+            <x>10</x>
+            <y>140</y>
             <width>1881</width>
             <height>801</height>
            </rect>
@@ -846,6 +846,41 @@
            <property name="horizontalSpacing">
             <number>0</number>
            </property>
+           <item row="0" column="0" alignment="Qt::AlignmentFlag::AlignRight">
+            <widget class="QScrollArea" name="scrollArea">
+             <property name="enabled">
+              <bool>true</bool>
+             </property>
+             <property name="sizePolicy">
+              <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+               <horstretch>0</horstretch>
+               <verstretch>0</verstretch>
+              </sizepolicy>
+             </property>
+             <property name="verticalScrollBarPolicy">
+              <enum>Qt::ScrollBarPolicy::ScrollBarAlwaysOn</enum>
+             </property>
+             <property name="widgetResizable">
+              <bool>true</bool>
+             </property>
+             <widget class="QWidget" name="scrollAreaWidgetContents">
+              <property name="geometry">
+               <rect>
+                <x>0</x>
+                <y>0</y>
+                <width>54</width>
+                <height>797</height>
+               </rect>
+              </property>
+              <property name="sizePolicy">
+               <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+                <horstretch>0</horstretch>
+                <verstretch>100</verstretch>
+               </sizepolicy>
+              </property>
+             </widget>
+            </widget>
+           </item>
           </layout>
          </widget>
         </widget>
